tests/ui/consts/issue-91434.rs
fn main() {
    [9; [[9E; h]]];
    //~^ ERROR: expected at least one digit in exponent
    //~| ERROR: cannot find value `h` in this scope [E0425]
}
